<resources>
    <string name="app_name">Android Life Cycle</string>
    <string name="first_page">WISDOM ALBUM</string>
    <string name="next_page_2"><![CDATA[START ALBUM >>>]]></string>
    <string name="briggs">BRIGGS</string>
    <string name="victor">VICTOR</string>
    <string name="wendy">WENDY</string>
    <string name="mitchie">MITCHIE</string>
    <string name="williams">WILLS</string>
    <string name="wisdom">WISDOM GALLERY</string>
    <string name="adefxmoney">ADEFX</string>
    <string name="this_is_for_ade">This is for ADE</string>
    <string name="home"><![CDATA[<<<HOME>>>]]></string>
</resources>